connect multi database

--- a/package.json
+++ b/package.json
@@ -6,7 +6,40 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "prisma:pull:db1": "npx prisma db pull --config=./prisma.config.ts && npx prisma generate --config=./prisma.config.ts",
+    "prisma:pull:db2": "npx prisma db pull --config=./prisma.config2.ts && npx prisma generate --config=./prisma.config2.ts",
+    "prisma:pull:db3": "npx prisma db pull --config=./prisma.config3.ts && npx prisma generate --config=./prisma.config3.ts",
+    "prisma:pull:all": "npm run prisma:pull:db1 && npm run prisma:pull:db2 && npm run prisma:pull:db3",
+    "prisma:push:db1": "npx prisma db push --config=./prisma.config.ts && npx prisma generate --config=./prisma.config.ts",
+    "prisma:push:db2": "npx prisma db push --config=./prisma.config2.ts && npx prisma generate --config=./prisma.config2.ts",
+    "prisma:push:db3": "npx prisma db push --config=./prisma.config3.ts && npx prisma generate --config=./prisma.config3.ts",
+    "prisma:push:all": "npm run prisma:push:db1 && npm run prisma:push:db2 && npm run prisma:push:db3",
+    "prisma:generate:db1": "npx prisma generate --config=./prisma.config.ts",
+    "prisma:generate:db2": "npx prisma generate --config=./prisma.config2.ts",
+    "prisma:generate:db3": "npx prisma generate --config=./prisma.config3.ts",
+    "prisma:generate:all": "npm run prisma:generate:db1 && npm run prisma:generate:db2 && npm run prisma:generate:db3",
+    "prisma:studio:db1": "npx prisma studio --config=./prisma.config.ts",
+    "prisma:studio:db2": "npx prisma studio --config=./prisma.config2.ts --port 5556",
+    "prisma:studio:db3": "npx prisma studio --config=./prisma.config3.ts --port 5557",
+    "prisma:migrate:db1": "npx prisma migrate dev --config=./prisma.config.ts",
+    "prisma:migrate:db2": "npx prisma migrate dev --config=./prisma.config2.ts",
+    "prisma:migrate:db3": "npx prisma migrate dev --config=./prisma.config3.ts",
+    "prisma:migrate:deploy:db1": "npx prisma migrate deploy --config=./prisma.config.ts",
+    "prisma:migrate:deploy:db2": "npx prisma migrate deploy --config=./prisma.config2.ts",
+    "prisma:migrate:deploy:db3": "npx prisma migrate deploy --config=./prisma.config3.ts",
+    "prisma:migrate:deploy:all": "npm run prisma:migrate:deploy:db1 && npm run prisma:migrate:deploy:db2 && npm run prisma:migrate:deploy:db3",
+    "prisma:reset:db1": "npx prisma migrate reset --config=./prisma.config.ts --force",
+    "prisma:reset:db2": "npx prisma migrate reset --config=./prisma.config2.ts --force",
+    "prisma:reset:db3": "npx prisma migrate reset --config=./prisma.config3.ts --force",
+    "prisma:validate:db1": "npx prisma validate --config=./prisma.config.ts",
+    "prisma:validate:db2": "npx prisma validate --config=./prisma.config2.ts",
+    "prisma:validate:db3": "npx prisma validate --config=./prisma.config3.ts",
+    "prisma:validate:all": "npm run prisma:validate:db1 && npm run prisma:validate:db2 && npm run prisma:validate:db3",
+    "prisma:format:db1": "npx prisma format --config=./prisma.config.ts",
+    "prisma:format:db2": "npx prisma format --config=./prisma.config2.ts",
+    "prisma:format:db3": "npx prisma format --config=./prisma.config3.ts",
+    "prisma:format:all": "npm run prisma:format:db1 && npm run prisma:format:db2 && npm run prisma:format:db3"
   },
   "keywords": [],
   "author": "",
