--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@prisma/client": "^7.0.0",
     "@types/cors": "^2.8.19",
     "@types/morgan": "^1.9.10",
+    "chalk": "^5.6.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
